[project]
  name = "pulumi_docker_build"
  description = "A Pulumi provider for building modern Docker images with buildx and BuildKit."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["docker", "buildkit", "buildx", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-docker-build"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_docker_build = ["py.typed", "pulumi-plugin.json"]
